examples/test/testpolicy18976.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18976
  namespace: namespace9
spec:
  podSelector:
    matchLabels:
      key35: value10
      key26: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value19
          key2: value49
          key34: value49
      podSelector:
        matchLabels:
          key0: value39
          key45: value48
